--- a/dia1/angular/src/app/component/footer/footer.component.html
+++ b/dia1/angular/src/app/component/footer/footer.component.html
@@ -1,4 +1,6 @@
 <div class="pie">
     <p>MyBooks todos los derechos reservados</p>
-
+    <a href="#"><img src="../../../assets/img/insta.png" ></a>
+    <a href="#"><img src="../../../assets/img/face.png" ></a>
+    <a href="#"><img src="../../../assets/img/twitter.png" ></a>
 </div>
