--- a/dia1/angular/src/app/pages/home/home.component.html
+++ b/dia1/angular/src/app/pages/home/home.component.html
@@ -1,4 +1,8 @@
 <div class="cuerpo">
+    <!-- <img  class="imagen" src="../../../assets/img/clint-mckoy-App9lCSl2uA-unsplash.jpg"  alt=""> -->
+    <div class="cover">
     <h1>BIENVENIDOS A LA MEJOR LIBRERIA DE TODAS</h1>
     <h2>Unete ahora a nuestra Familia</h2>
+    </div>
+
 </div>
