--- a/dia1/angular/src/app/component/footer/footer.component.css
+++ b/dia1/angular/src/app/component/footer/footer.component.css
@@ -4,7 +4,16 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 40px;
-    background-color: rgb(78, 78, 78);
-    color: white;
+    height: 10vh;
+    background-color: white;
+    color: black;
+    font-size: 20px;
+    gap: 1rem;
+}
+
+.pie a img
+{
+    width: 50px;
+    height: 50px;
+    
 }
