--- a/dia1/angular/src/app/component/formulario-registro/formulario-registro.component.css
+++ b/dia1/angular/src/app/component/formulario-registro/formulario-registro.component.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 87.1vh;
+    height: 80vh;
 }
 
 .formulario
@@ -19,6 +19,7 @@
     border: 1px black solid;
     border-radius: 10px;
     padding: 1rem;
+    background-color: white;
     
 }
 
