--- a/dia1/angular/src/app/component/header/header.component.html
+++ b/dia1/angular/src/app/component/header/header.component.html
@@ -2,8 +2,9 @@
     <h1>MyBooks</h1>
 
     <ul>
-        <li><a [routerLink]="[ '/home' ]" routerLinkActive="active">Home</a></li>
-        <li><a [routerLink]="[ '/registro' ]">Registro</a></li>
+        <li><a routerLink= "" >Home</a></li>
+        <li><a routerLink='/registro'>Registro</a></li>
+        <li><a routerLink='/perfil'>Perfil</a></li>
     </ul>
 
 </div>
