--- a/dia1/angular/src/app/pages/registro/registro.component.css
+++ b/dia1/angular/src/app/pages/registro/registro.component.css
@@ -3,5 +3,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 87.1vh;
+    height: 80vh;
+    background-image: url("../../../assets/img/michal-matlon-JCx11EJ9sXc-unsplash.jpg");
+    background-size: cover;
 }
