--- a/dia1/angular/src/app/component/footer/footer.component.html
+++ b/dia1/angular/src/app/component/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div class="pie">
-    <p>MyBooks todos los derechos reservados</p>
+    <p>© MyBooks todos los derechos reservados</p>
     <a href="#"><img src="../../../assets/img/insta.png" ></a>
     <a href="#"><img src="../../../assets/img/face.png" ></a>
     <a href="#"><img src="../../../assets/img/twitter.png" ></a>
