--- a/dia1/angular/src/app/component/header/header.component.html
+++ b/dia1/angular/src/app/component/header/header.component.html
@@ -3,6 +3,7 @@
 
     <ul>
         <li><a routerLink= "" >Home</a></li>
+        <li><a routerLink= "/libros" >Libros</a></li>
         <li><a routerLink='/registro'>Registro</a></li>
         <li><a routerLink='/perfil'>Perfil</a></li>
     </ul>
