--- a/dia1/angular/src/app/pages/libros/libros.component.html
+++ b/dia1/angular/src/app/pages/libros/libros.component.html
@@ -1,11 +1,19 @@
 <div class="container">
 
+    <div class="buscador">
+        <input class="espacio" type="number" placeholder="Buscar Libros" #input5>
+        <button  class="btn" (click) =getAll(input5.value)>
+            <i class="fa fa-search"></i>
+        </button>
+    </div>
+    
     <div class="alerta" *ngIf ="Libros.length ===0">
-        <img src="../../../assets/img/gato404.jpg" alt="">
+        <img src="../../../assets/img/gato404.jpg" class="imgFondo" alt="">
     </div>
 
     <div class="conte" *ngFor ="let librito of Libros; let par = odd;" [ngClass]="{botoncito:par}" >
         <div class="card">
+            <p class="close" (click)="delete(librito.id_libro)">X</p>
             <img src="{{librito.photo}}" alt="">
         </div>
     <div class="informacion">
@@ -20,28 +28,9 @@
             <input  type="button" value="Comprar">
         </div>
     </div>
+    
     </div>
 
 </div>
 
 
-<div class="container2">
-
-    <form action="Formulario">
-        <div class="preformulario">
-            <form class="formulario" [formGroup]="profileForm" (ngSubmit)="onSubmit()">
-                
-                    <h1>Añade tu libro</h1>
-                    <input class="componente" formControlName="titulo" type="text" placeholder="Titulo">
-                    <input class="componente" formControlName="tipoLibro" type="text" placeholder="Autor">
-                    <input class="componente" formControlName="autor" type="text" placeholder="Tipo de Libro">
-                    <input class="componente" formControlName="precio" type="number" placeholder="Precio">
-                    <input class="componente" formControlName="photo" type="text" placeholder="Photo">
-                    <input class="componente" formControlName="id_libro" type="number" placeholder="Codigo Libro">
-                    <input class="boton" type="submit" value="Añadir Libro">
-                
-            </form>
-        </div>
-    </form>
-
-</div>
