--- a/dia1/angular/src/app/pages/perfil/perfil.component.html
+++ b/dia1/angular/src/app/pages/perfil/perfil.component.html
@@ -22,7 +22,9 @@
                 <input class="componente" #input2 type="text"  placeholder="Apellido">
                 <input class="componente" #input3 type="text"  placeholder="Correo">
                 <input class="componente" #input4 type="text"  placeholder="Url">
-                <input class="boton" type="button" (click)=enviar1(input1) (click)=enviar2(input2) (click)=enviar3(input3) (click)=enviar4(input4) value="Modificar">
+                <input class="boton" type="button" (click)=enviar1(input1,input2,input3,input4) value="Modificar">
+                
+                
             </div>
         </div>
     </div>
