--- a/dia1/angular/src/styles.css
+++ b/dia1/angular/src/styles.css
@@ -2,10 +2,10 @@
 {
     margin: 0;
     padding: 0;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
-.color1
+:root
 {
     color:rgb(50, 185, 185);
 }
