--- a/dia1/angular/src/app/pages/libros/libros.component.css
+++ b/dia1/angular/src/app/pages/libros/libros.component.css
@@ -1,21 +1,17 @@
 .container
 {
-    height: 90vh;
+    min-height: 70vh;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    padding-top: 50px;
 
 }
-.container2
+
+.imgFondo
 {
-    height: 90vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-image: url(../../../assets/img/paolo-chiabrando-TuNYNsK0OC0-unsplash.jpg);
-    background-size: cover;
-    background-position: 50% 50%;
+    max-height: 50vh;
 }
 
 .conte
@@ -33,6 +29,7 @@
 }
 .card
 {
+    position: relative;
     height: 250px;
     width: 100%;
 }
@@ -90,73 +87,93 @@
     font-size: 16px;
 }
 
-/* formulario */
-
-.preformulario
+.close
 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 80vh;
-}
-
-.formulario
-{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    text-align: center;
-    width: 300px;
-    height: 370px;
-    border: 1px black solid;
-    border-radius: 10px;
-    padding: 1rem;
-    background-color: transparent;
-    box-shadow: 0 0 7px #111;
-    
-}
-
-.componente
-{
-    border-radius: 5px;
-    text-align: center;
-    width: 65%;
-    height: 30px;
-    margin: 1px;
-    padding: 5px;
-}
-
-.boton
-{
-    width: 40%;
-    height: 30px;
-    margin-top: 1rem;
-    background-color:rgb(50, 185, 185);
+    position: absolute;
+    top: -8px;
+    right: -6px;
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    background-color: #c44a4a;
     color: white;
-    border-radius: 3px;
+    line-height: 25px;
     cursor: pointer;
+    border-radius: 50%;
 }
 .botoncito
 {
     color: white;
-    background-color: rgb(224, 194, 138);
-    
+    background-color: rgb(224, 194, 138);  
 }
 
-.formulario h1
+/* buscador */
+
+.buscador
 {
-    color: rgb(50, 185, 185);
+    position: absolute;
+    left: 50%;
+    top: 15%;
+    transform: translate(-50%,-50%);
+    padding: 10px;
 }
-.alerta
+
+.espacio
 {
-    width: 50%;
+    outline: none;
+    box-sizing: border-box;
+    height: 60px;
+    width: 0;
+    padding: 0 20px;
+    color:#000;
+    border-radius: 50px;
+    font-size: 20px;
+    border: 1px solid rgb(50, 185, 185);
+    transition: all .7s ease;
+}
+
+::placeholder
+{
+    color:grey;
+}
+
+.btn
+{
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 80px;
+    height: 80px;
+    background: rgb(50, 185, 185);
+    line-height: 80px;
     text-align: center;
+    cursor: pointer;
+    transition: .5s;
+    border-radius: 50%;
 }
 
-.alerta img
+.btn i 
 {
-    width: 70%;
-    border-radius: 10px;
+    font-size: 25px;
+    color: white;
+    line-height: 80px;
+    transition: all .7s ease;
 }
+
+.buscador:hover .espacio
+{
+    width: 350px;
+}
+
+.buscador:hover i
+{
+    transform:rotate(-360deg);
+}
+.btn:hover
+{
+    background: rgb(50, 185, 185);
+}
+
+
+
+
