--- a/dia1/angular/src/app/pages/perfil/perfil.component.css
+++ b/dia1/angular/src/app/pages/perfil/perfil.component.css
@@ -6,6 +6,7 @@
     height: 80vh;
     background-image: url("../../../assets/img/michal-matlon-JCx11EJ9sXc-unsplash.jpg");
     background-size: cover;
+    background-position: 50% 50%;
 }
 
 .for
