--- a/dia1/angular/src/app/pages/registro/registro.component.css
+++ b/dia1/angular/src/app/pages/registro/registro.component.css
@@ -6,4 +6,5 @@
     height: 80vh;
     background-image: url("../../../assets/img/michal-matlon-JCx11EJ9sXc-unsplash.jpg");
     background-size: cover;
+    background-position: 50% 50%;
 }
