--- a/dia1/angular/src/app/pages/modificar-libros/modificar-libros.component.html
+++ b/dia1/angular/src/app/pages/modificar-libros/modificar-libros.component.html
@@ -11,7 +11,7 @@
                     <input class="componente"  #input4 type="number" placeholder="Precio">
                     <input class="componente"  #input5 type="text" placeholder="Photo">
                     <input class="componente"  #input6 type="number" placeholder="Codigo Libro">
-                    <input class="boton" type="button" value="Añadir Libro" (click)="modificar(input1.value,input2.value,input3.value,input4.value,input5.value,input6.value)">
+                    <input class="boton" type="button" value="Modificar Libro" (click)="modificar(input1.value,input2.value,input3.value,input4.value,input5.value,input6.value)">
                 
             </form>
         </div>
